# hyperalloc-bench

./: .gitignore  README.md  bind_vfio.py  compiling.ipynb  compiling.py  compiling.sh  flake.nix  inflate.ipynb  inflate.py  inflate.sh  llfree_vfio.sh  max_power.sh  measure.py  multivm.ipynb  multivm.py  multivm.sh  pyproject.toml  requirements.txt  run.py  stream.ipynb  stream.py  stream_quick.sh  talk.ipynb  talk2.ipynb  utils.py  vm_resize.py
artifact-eval/: Dockerfile  README.md  build.sh  run.sh  sshfs.sh
artifact-eval/files/: init.sh  sshd_config
compiling/: __init__.py  bench.py  blender-auto.dref  blender-auto_extra.dref  clang-auto-vfio.dref  clang-auto-vfio_extra.dref  clang-auto.dref  clang-auto_extra.dref  clang-baseline.dref  clang-baseline_extra.dref  clang-huge-vfio.dref  clang-huge-vfio_extra.dref  clang.dref  compiling.ipynb  compiling.py  compiling.sh  linux-auto.dref  linux-auto_extra.dref  plot.py  poster-clang.dref  poster-clang_extra.dref  talk-clang.dref  talk-clang_extra.dref  talk-llfree.dref  talk-llfree_extra.dref
inflate/: bench.py  inflate.dref  inflate.ipynb  inflate.py  inflate.sh  plot.py
multivm/: bench.py  clang-s_extra.dref  clang_extra.dref  multivm.ipynb  multivm.py  multivm.sh  plot.py
scripts/: base.sh  bind_vfio.py  config.py  enable-perf.sh  llfree_vfio.sh  measure.py  qemu.py  run.py  utils.py  vm_resize.py
stream/: bench.py  ftq-speed.dref  ftq-stats.dref  ftq.dref  ftq_percentile.dref  plot.py  stream-speed.dref  stream-stats.dref  stream.ipynb  stream.py  stream.sh  stream_percentile.dref  stream_quick.sh
(+642 files in other folders)
