[project]
name = "hyperalloc-bench"
version = "0.0.1"
description = "HyperAlloc Benchmarks"
dependencies = [
    "seaborn==0.13.2",
    "pandas==2.2.2",
    "psutil==6.0.0",
    "qemu.qmp==0.0.3",
    "ipykernel==6.29.3",
    "scipy==1.14.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["compiling", "inflate", "multivm", "stream", "scripts"]
